<resources>
    <string name="app_name">EWSS</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="login">Login</string>
    <string name="not_have_account">Belum memiliki akun?</string>
    <string name="register">Register</string>
    <string name="logo">Logo</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="number_phone">Number Phone</string>
    <string name="city">City</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_activity">Forgot password</string>
    <string name="send_verification">Send verification Code</string>
    <string name="verification">Verification</string>
    <string name="code">Code</string>
    <string name="column_must_be_filled">Kolom harus di isi</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="less_character">Password kurang dari 8 karakter</string>
    <string name="invalid_confirm_password">Password yang anda masukkan berbeda</string>
    <string name="correct_code">Kode yang anda masukkan benar</string>
    <string name="login_success">Selamat datang di aplikasi EWSS</string>
    <string name="register_success">Akun anda %1$s telah berhasil terdaftar</string>
    <string name="invalid_email">Format email salah</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="diagnosa">Diagnosa</string>
    <string name="history">History</string>
    <string name="account">Account</string>
    <string name="picture_ewss">Picture EWSS</string>
    <string name="personal_info">PERSONAL INFO</string>
    <string name="usia">Usia</string>
    <string name="kesadaran">Kesadaran</string>
    <string name="pernafasan_menit">Pernafasan</string>
    <string name="denyut_nadi_menit">Denyut Nadi</string>
    <string name="tekanan_darah">Tekanan Darah</string>
    <string name="suhu">Suhu</string>
    <string name="logout">Logout</string>
    <string name="diagnosa_result">Hasil: %1$s</string>
    <string name="keterangan">Keterangan</string>
    <string name="label">Label</string>
    <string name="status">Status: %1$s</string>
    <string name="keterangan_detail">Keterangan: %1$s</string>
    <string name="tingkat_kegawatan">Tingkat Kegawatan</string>
    <string name="address">Alamat</string>
    <string name="stabil">Stabil (%1$s\%%)</string>
    <string name="hati_hati">Hati-Hati (%1$s\%%)</string>
    <string name="waspada">Waspada (%1$s\%%)</string>
    <string name="berbahaya">Berbahaya (%1$s\%%)</string>
    <string name="dummy_email">admin@gmail.com</string>
    <string name="dummy_password">admin</string>

    <string-array name="status_kesadaran">
        <item>coma</item>
        <item>stupor</item>
        <item>somnolen</item>
        <item>cpmposmentis</item>
        <item>apatis</item>
        <item>delirium</item>
    </string-array>
</resources>
