<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.main.history.detail.DetailDiagnosaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/diagnosa"
            layout="@layout/fragment_diagnosa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_tingkat_kegawatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/tingkat_kegawatan"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/diagnosa" />

        <View
            android:id="@+id/label"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/containe_full_corner"
            app:layout_constraintLeft_toLeftOf="@id/txt_tingkat_kegawatan"
            app:layout_constraintRight_toRightOf="@id/txt_tingkat_kegawatan"
            app:layout_constraintTop_toBottomOf="@id/txt_tingkat_kegawatan"
            android:backgroundTint="@color/red" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/diagnosa"
            tools:text="@string/status" />

        <TextView
            android:id="@+id/ketarangan_hasil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label"
            tools:text="@string/keterangan_detail" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>